GridClassKey 1.0.1-dev
=================================================
- refresh grid after row editing
- [#103][#104] fix Inline Editing Not working MODx 2.3
- avoid duplicate values on advanced search grid
- bugfix Removing Field Criteria removes all

GridClassKey 1.0.1-beta4 (August 12, 2014)
=================================================
- [#100] Delete/undelete icon doesn't work in Revo 2.3.1
- Update permissions in CMP
- add Static Grid Container
- [#99] fix different data types on action comparison

GridClassKey 1.0.1-beta3 (July 27, 2014)
=================================================
- fix un/publish permission existence on JS's config
- [#90] Delete button still exists for 'id' in settings > fields
- [#68] Error egress when user put wrong editor_type
- [#91] Documentation on Editor type (feature request)
- [#97] Fix MODX version comparing issues

GridClassKey 1.0.1-beta2 (July 14, 2014)
=================================================
- [#76] fix bug on dragging fields brings back description field and removes output filters and titles
- [#79] fix compatibility adjustment for action's value on 2.3.0+
- [#89] Field Order bug
- [#94] Add permissions for containers
- [#95] fix error when context_key is not in the list of fields to show in the child list

GridClassKey 1.0.1-beta1 (July 4, 2014)
=================================================
- [#81] AJAX loop for actions
- [#82][#92] Give limit option for number of children to revert grid to tree.
- [#79] Compatibility adjustment for action's value on 2.3.0+

GridClassKey 1.0.0-pl (April 21, 2014)
=================================================
- bugfix missed compress JS checking
- add gridclasskey.mgr_css to system settings
- [#73] fix custom output filters for TV fields
- [#42] Option to hide bulk action button and advanced search
- fix saving on CMP

GridClassKey 1.0.0-rc5 (April 17, 2014)
=================================================
- [#70] fix inline editing that breaks parsed TV 